# framework-comparison

./: README.md  pyproject.toml
agent_compare/: cli.py  compatibility.py
agent_compare/agentscope_impl/: __init__.py  adapter.py  concurrent.py  multi_agent.py  multi_instance.py
agent_compare/fake_llm/: __init__.py  base.py  rules.py
agent_compare/langchain_impl/: __init__.py  adapter.py  concurrent.py  multi_agent.py  multi_instance.py
docs/: FRAMEWORK_COMPARISON.md
tests/: __init__.py  conftest.py  test_framework_comparison.py
